tests/endpoint_macros_compile_fail/missing_param_field.rs
use better_fetch::EndpointParamsDerive;

#[derive(EndpointParamsDerive)]
#[endpoint(path = "/items/:id/:slug")]
struct ItemParams {
    id: u64,
}

fn main() {}
